# RustyDU

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  classify.rs  digitize.rs  extract.rs  main.rs  result_utils.rs  validate.rs
