[package]
name = "RustyDU"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", default-features = false, features = ["macros", "rt-multi-thread"] }
csv = "1.3"
